--- a/app/src/main/res/layout/list_iten_film.xml
+++ b/app/src/main/res/layout/list_iten_film.xml
@@ -5,11 +5,14 @@
     android:layout_width="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:background="@color/BackgrounDetail">
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_width="300dp"
+            android:layout_height="450dp"
             android:id="@+id/iv_filmes"
+            android:layout_gravity="center"
             android:scaleType="fitCenter"
             android:padding="8dp"/>
     </LinearLayout>
